[package]
name = "fwloki"
version = "0.1.0"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.2"
crossbeam-channel = "0.4"
maxminddb = { version = "0.13", features = ["mmap"] }

clap = "3.0.0-beta.1"
env_logger = "0.7"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
serde = "1"
serde_derive = "1"
toml = "0.5"

nom = "6.0.0-alpha1"
chrono = "0.4"

tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["rustls-tls"] }

prost = "0.6"
prost-types = "0.6"
bytes = "0.5"
snap = "1"

anyhow = "1"

[build-dependencies]
prost-build = "0.6"
